feat: Add new components and update project configuration
- Introduced CategoriesButton, GameCard, ListItemSeparator, CatalogOption, and CatalogModal components for enhanced UI.
- Added colors constants for better color management.
- Created interfaces for course items and updated services to fetch courses from an API.
- Updated Info.plist to include new keys for React Native architecture.
- Modified project settings in Xcode to include new files and configurations.
- Updated package.json to remove unused dependencies and streamline scripts.
- Enhanced TypeScript configuration with path aliases for shared components.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,9 @@
 {
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "paths": {
+      "@shared/*": ["./shared/*"],
+    }
+  },
   "extends": "@react-native/typescript-config"
 }
